<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button
        android:id="@+id/topHeadlineBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startTopHeadlineActivity"
        android:text="@string/top_headline"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/newsSourceBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startNewsSourceActivity"
        android:text="@string/news_source"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/topHeadlineBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/countriesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startCountiesActivity"
        android:text="@string/countries"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/newsSourceBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/languagesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startLanguageActivity"
        android:text="@string/language"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/countriesBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startSearchActivity"
        android:text="@string/search"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/languagesBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>