<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/sixty_dp"
        android:layout_height="@dimen/sixty_dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/two_hundred_dp"
        android:contentDescription="@string/error_message"
        android:src="@drawable/red_error_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/ten_dp"
        android:gravity="center_horizontal"
        android:text="@string/oops"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/twentyfive_sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:gravity="center_horizontal"
        android:text="@string/error_message"
        android:textColor="@android:color/black"
        android:textSize="@dimen/twenty_sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/try_again_btn"
        android:layout_width="@dimen/two_hundred_dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/twenty_dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:gravity="center_horizontal"
        android:padding="@dimen/ten_dp"
        android:text="@string/try_again"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sixteen_sp"
        android:textStyle="bold" />
</LinearLayout>